[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/regulation/deck_select.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/deck/select_scene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/deck/build_menu_scene.gd" type="Script" id=3]

[node name="BuildMenuScene" type="Node"]
script = ExtResource( 3 )

[node name="DeckSelectScene" parent="." instance=ExtResource( 2 )]
visible = false

[node name="RegulationSelect" parent="." instance=ExtResource( 1 )]

[node name="Cover" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="decide_button_pressed" from="RegulationSelect" to="." method="_on_RegulationSelect_decide_button_pressed"]
[connection signal="return_button_pressed" from="RegulationSelect" to="." method="_on_RegulationSelect_return_button_pressed"]
